# app/models/source.rb
@@ -24,7 +24,4 @@ class Source < ApplicationRecord
 
   # Tasks
   has_many :tasks
-
-  ALLOWED_REFRESH_STATUS_VALUES = ["deployed", "quota_limited"].freeze
-  validates :refresh_status, :allow_nil => true, :inclusion => {:in => ALLOWED_REFRESH_STATUS_VALUES, :message => "%{value} is not included in #{ALLOWED_REFRESH_STATUS_VALUES}"}
 end
